Removed align-items:center causing the scroll bug

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ body{
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #f2f2f2;
